# rinha-backend-2023

./: .gitignore  db.sql  docker-compose.yml  dockerfile  entrypoint.sh  http.rest  makefile  nginx.conf  postgresql.conf  pyproject.toml  run-test.sh
.github/workflows/: ci.yml
app/: main.py  model.py  pool.py
rinha-2023-fastapi/: .env  docker-compose.local.yml  docker-compose.yml  dockerfile  http.rest  main.py  model.py  nginx.conf  postgresql.conf  pyproject.toml
rinha-2023-robyn/: docker-compose.local.yml  docker-compose.yml  dockerfile  http.rest  main.py  model.py  nginx.conf  nginx.local.conf  pyproject.toml  robyn.env
rinha-2023-robyn-with-redis/: db.sql  docker-compose.local.yml  docker-compose.yml  dockerfile  main.py  model.py  nginx.conf  nginx.local.conf  postgresql.conf  pyproject.toml  robyn.env
