[tool.poetry]
name = "rinha-2023-fastapi"
version = "0.1.0"
description = ""
authors = ["carlos-rian <crian.rian@gmail.com>"]
readme = "README.md"
packages = [{include = "rinha_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
gunicorn = "^21.2.0"

psycopg-pool = "^3.2.0"
psycopg-binary = "^3.1.16"
psycopg = "^3.1.16"


[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
