[tool.poetry]
name = "rinha-2023-robyn-with-redis"
version = "0.1.0"
description = ""
authors = ["carlos-rian <crian.rian@gmail.com>"]
readme = "README.md"
packages = [{include = "rinha_2023_robyn"}]

[tool.poetry.dependencies]
python = "^3.10"
robyn = "^0.49.3"
pydantic = "^2.5.3"

psycopg-pool = "^3.2.0"
psycopg-binary = "^3.1.16"
psycopg = "^3.1.16"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
